// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arr with a specific datatype and input detects it as expected 1`] = `
Processed {
  "value": Array [
    "hi",
    "yo",
    "1",
  ],
}
`;

exports[`arr with a specific datatype and input detects it as expected 2`] = `
Processed {
  "nested": Object {
    "3": Processed {
      "errors": Array [
        "Shorter than minimum length of 1.",
      ],
    },
  },
}
`;

exports[`arr with a specific datatype and input detects it as expected 3`] = `
Processed {
  "nested": Object {
    "0": Processed {
      "errors": Array [
        "Not a valid string.",
      ],
    },
    "1": Processed {
      "errors": Array [
        "Not a valid string.",
      ],
    },
    "2": Processed {
      "errors": Array [
        "Not a valid string.",
      ],
    },
    "3": Processed {
      "errors": Array [
        "Not a valid string.",
      ],
    },
  },
}
`;

exports[`arr with a specific datatype and input detects it as expected 4`] = `
Processed {
  "nested": Object {
    "2": Processed {
      "errors": Array [
        "Not a valid string.",
      ],
    },
  },
}
`;

exports[`arr with a specific datatype and input detects it as expected 5`] = `
Processed {
  "value": Array [],
}
`;

exports[`arr with a specific datatype and input detects it as expected 6`] = `
Processed {
  "value": Array [
    Object {
      "value": 5,
    },
    Object {
      "value": 1,
    },
    Object {
      "value": 100,
    },
  ],
}
`;

exports[`arr with a specific datatype and input detects it as expected 7`] = `
Processed {
  "nested": Object {
    "0": Processed {
      "nested": Object {
        "value": Processed {
          "errors": Array [
            "Missing required field.",
          ],
        },
      },
    },
  },
}
`;

exports[`arr with a specific datatype and input detects it as expected 8`] = `
Processed {
  "nested": Object {
    "0": Processed {
      "nested": Object {
        "value": Processed {
          "errors": Array [
            "Not a valid integer.",
          ],
        },
      },
    },
  },
}
`;

exports[`arr with a specific datatype and input detects it as expected 9`] = `
Processed {
  "value": Array [],
}
`;

exports[`arr with a specific datatype and input detects it as expected 10`] = `
Processed {
  "errors": Array [
    "Not an array.",
  ],
}
`;

exports[`arr with a specific datatype and input detects it as expected 11`] = `
Processed {
  "errors": Array [
    "Not an array.",
  ],
}
`;

exports[`arr with a specific datatype and input detects it as expected 12`] = `Processed {}`;

exports[`arr with a validator and a non-empty array 1`] = `
Processed {
  "value": Array [
    Object {
      "test": "a",
    },
    Object {
      "test": "b",
    },
  ],
}
`;

exports[`arr with a validator and an empty array 1`] = `
Processed {
  "value": Array [],
}
`;

exports[`bool handles "", correctly 1`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "", correctly 2`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "[object Object]", correctly 1`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "[object Object]", correctly 2`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "10", correctly 1`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "10", correctly 2`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "false", correctly 1`] = `
Object {
  "value": false,
}
`;

exports[`bool handles "false", correctly 2`] = `
Object {
  "value": false,
}
`;

exports[`bool handles "null", correctly 1`] = `
Object {
  "error": "Not a valid boolean.",
}
`;

exports[`bool handles "true", correctly 1`] = `
Object {
  "value": true,
}
`;

exports[`bool handles "true", correctly 2`] = `
Object {
  "value": true,
}
`;

exports[`bool handles "undefined", correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`empty handles "", correctly 1`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "", correctly 2`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "[object Object]", correctly 1`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "[object Object]", correctly 2`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "10", correctly 1`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "10", correctly 2`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "false", correctly 1`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "false", correctly 2`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "null", correctly 1`] = `
Object {
  "value": null,
}
`;

exports[`empty handles "true", correctly 1`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "true", correctly 2`] = `
Object {
  "error": "Not null.",
}
`;

exports[`empty handles "undefined", correctly 1`] = `
Object {
  "error": "Not null.",
}
`;

exports[`float handles "" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "[object Object]" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "-9.2" correctly 1`] = `
Object {
  "value": -9.2,
}
`;

exports[`float handles "-10" correctly 1`] = `
Object {
  "value": -10,
}
`;

exports[`float handles "1.0" correctly 1`] = `
Object {
  "value": 1,
}
`;

exports[`float handles "1.1" correctly 1`] = `
Object {
  "value": 1.1,
}
`;

exports[`float handles "2.17319823987124e+26" correctly 1`] = `
Object {
  "value": 2.17319823987124e+26,
}
`;

exports[`float handles "8" correctly 1`] = `
Object {
  "value": 8,
}
`;

exports[`float handles "10" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`float handles "10.0" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`float handles "10.9" correctly 1`] = `
Object {
  "value": 10.9,
}
`;

exports[`float handles "10foo" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`float handles "foobar" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "null" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "undefined" correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`int handles "" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "" correctly 2`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "[object Object]" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "-1213" correctly 1`] = `
Object {
  "value": -1213,
}
`;

exports[`int handles "-1234.2" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "0" correctly 1`] = `
Object {
  "value": 0,
}
`;

exports[`int handles "0.3" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "0.5" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "1" correctly 1`] = `
Object {
  "value": 1,
}
`;

exports[`int handles "1.2397891239817987e+28" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "8" correctly 1`] = `
Object {
  "value": 8,
}
`;

exports[`int handles "10" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`int handles "10.0" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`int handles "10.4" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "10.4" correctly 2`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "10foo" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`int handles "1000" correctly 1`] = `
Object {
  "value": 1000,
}
`;

exports[`int handles "1237832" correctly 1`] = `
Object {
  "value": 1237832,
}
`;

exports[`int handles "hello" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "null" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "undefined" correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`obj handles "", correctly 1`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "", correctly 2`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "[object Object]", correctly 1`] = `
Object {
  "value": Object {},
}
`;

exports[`obj handles "[object Object]", correctly 2`] = `
Object {
  "value": Object {
    "nested": Object {},
  },
}
`;

exports[`obj handles "10", correctly 1`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "10", correctly 2`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "null", correctly 1`] = `
Object {
  "value": null,
}
`;

exports[`obj handles "undefined", correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`str handles "", correctly 1`] = `
Object {
  "value": "",
}
`;

exports[`str handles "", correctly 2`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "[object Object]", correctly 1`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "10", correctly 1`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "10", correctly 2`] = `
Object {
  "value": "10",
}
`;

exports[`str handles "null", correctly 1`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "test", correctly 1`] = `
Object {
  "value": "test",
}
`;

exports[`str handles "undefined", correctly 1`] = `
Object {
  "value": undefined,
}
`;
